--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,31 +1,19 @@
-name: Deploy Site
-
-on:
-  push:
-    branches:
-      - main
-
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Build Docker image
         run: docker build -t monsite:latest .
 
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v3
-      - name: Test Docker image
+      - name: Test Docker container
         run: |
           docker run -d -p 8081:80 --name testsite monsite:latest
           sleep 5
           curl -f http://localhost:8081
           docker stop testsite
           docker rm testsite
-
   deploy:
     runs-on: ubuntu-latest
     needs: test
