--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,10 @@
+name: Deploy Site
+
+on:
+  push:
+    branches:
+      - main
+
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
@@ -14,9 +21,10 @@ jobs:
           curl -f http://localhost:8081
           docker stop testsite
           docker rm testsite
+
   deploy:
     runs-on: ubuntu-latest
-    needs: test
+    needs: build-and-test
     steps:
       - uses: actions/checkout@v3
       - name: Deploy to GitHub Pages
@@ -24,3 +32,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./
+
