--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: Deploy Site
 
 permissions:
-  contents: write   # <--- IMPORTANT
+  contents: write
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -22,7 +22,31 @@ jobs:
       - name: Build Docker image
         run: docker build -t monsite:latest -f ./Dockerfile .
 
-      - name: Test Docker container
+      - name: Save Docker image
+        run: docker save monsite:latest | gzip > monsite.tar.gz
+
+      - name: Upload built image artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: built-image
+          path: monsite.tar.gz
+
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Download built image
+        uses: actions/download-artifact@v3
+        with:
+          name: built-image
+
+      - name: Load Docker image
+        run: gunzip -c monsite.tar.gz | docker load
+
+      - name: Test container
         run: |
           docker run -d -p 8081:80 --name testsite monsite:latest
           sleep 5
@@ -30,11 +54,13 @@ jobs:
           docker stop testsite
           docker rm testsite
 
+
   deploy:
     runs-on: ubuntu-latest
-    needs: build-and-test
+    needs: test
     steps:
       - uses: actions/checkout@v3
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
