--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         run: docker save monsite:latest | gzip > monsite.tar.gz
 
       - name: Upload built image artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4   # <--- FIX HERE
         with:
           name: built-image
           path: monsite.tar.gz
@@ -39,7 +39,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Download built image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4   # <--- FIX HERE
         with:
           name: built-image
 
@@ -60,6 +60,13 @@ jobs:
     needs: test
     steps:
       - uses: actions/checkout@v3
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./
+
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
